# cppAstar

./: .gitignore  CMakeLists.txt  LICENSE  README.md  main.cpp
dataScripts/: astar.Rmd  map0_tests.Rmd  map1_tests.Rmd  map2_tests.Rmd  map3_1_tests.Rmd  map3_2_tests.Rmd  map3_3_tests.Rmd  map3_tests.Rmd
dataScripts/data/: cpp_astar_path.csv  cpp_block_simplified.csv  cpp_reg_simplified.csv  cpp_smoothCurv.csv  cpp_wayPointGenerator.csv  map0_wayPointSmoothTest.csv  map0_wayPointTest.csv  map1_1_mapStatus.csv  map1_1_wayPointSmoothTest.csv  map1_1_wayPointTest.csv  map1_2_mapStatus.csv  map1_2_wayPointSmoothTest.csv  map1_2_wayPointTest.csv  map1_3_mapStatus.csv  map1_3_wayPointSmoothTest.csv  map1_3_wayPointTest.csv  map2_1_mapStatus.csv  map2_1_wayPointSmoothTest.csv  map2_1_wayPointTest.csv  map2_2_mapStatus.csv  map2_2_wayPointSmoothTest.csv  map2_2_wayPointTest.csv  map2_3_mapStatus.csv  map2_3_wayPointSmoothTest.csv  map2_3_wayPointTest.csv  map3_1_wayPointSmoothTest.csv  map3_1_wayPointTest.csv  map3_2_wayPointSmoothTest.csv  map3_2_wayPointTest.csv  map3_3_wayPointSmoothTest.csv  map3_3_wayPointTest.csv  path.csv  path_pick_block.csv  path_pick_reg.csv  status.csv
include/HGJPathSmooth/: pathSmoother.cpp  pathSmoother.h  vec3f.cpp  vec3f.h
include/aStar/: aStar.cpp  aStar.hpp  aStarPathPlanner.cpp  aStarPathPlanner.h  vecNode.cpp  vecNode.hpp
include/model/: grid.cpp  threeDModel.cpp  threeDModel.h
include/pathSimplifier/: blockCheckerSimplifier.cpp  blockCheckerSimplifier.hpp  pathSimplifier.cpp  pathSimplifier.hpp  regressionSimplifier.cpp  regressionSimplifier.hpp
include/wayPointsGenerator/: wayPointsGenerator.cpp  wayPointsGenerator.hpp
